# 57-exercises-in-Rust

./: .gitignore  Cargo.toml  README.md
data/: ex56_inventory.json  names.txt  sorted_names.txt
src/: utils.rs
src/ex03/: main.rs
src/ex04/: main.rs
src/ex05/: main.rs
src/ex06/: main.rs
src/ex09/: main.rs
src/ex10/: main.rs
src/ex13/: main.rs
src/ex14/: main.rs
src/ex15/: main.rs
src/ex17/: main.rs
src/ex18/: main.rs
src/ex20/: main.rs
src/ex21/: main.rs
src/ex22/: main.rs
src/ex23/: main.rs
src/ex30/: main.rs
src/ex31/: main.rs
src/ex35/: main.rs
src/ex36/: main.rs
src/ex38/: main.rs
src/ex41/: main.rs
src/ex42/: employee.csv  main.rs
src/ex43/: README.md  main.rs
src/ex44/: main.rs
src/ex45/: README.md  main.rs
src/ex46/: main.rs
src/ex47/: main.rs
src/ex48/: README.md  main.rs
src/ex49/: main.rs
src/ex50/: README.md  main.rs
src/ex51/: README.md  main.rs
src/ex52/: README.md  main.rs
src/ex53/: README.md
src/ex54/: main.rs
src/ex54/templates/: input.html
src/ex55/: README.md  main.rs
src/ex55/templates/: input.html
src/ex56/: README.md  main.rs
src/ex56/templates/: inventory.html
src/ex57/: main.rs
src/utils/: conversion_util.rs  mod.rs  std_util.rs  string_util.rs
templates/ex43/: index.html
templates/ex54/: input.html  stats.html
templates/ex55/: display.html
templates/ex56/: inventory.csv
