[package]
name = "exercises_for_programmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
regex = "1"
rand = "0.8"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
actix-web = "4"
redis = "0.29.5"
tera = "1.20.0"
