[package]
name = "exercises_for_programmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
regex = "1"
rand = "0.8"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
actix-web = "4"
redis = "0.29.5"
tera = "1.20.0"
mongodb = "3.2.3"
md-5 = "0.10.6"
uuid = "1.16.0"
url = "2.5.4"
thiserror = "2.0.12"
clap = { version="4", features=["derive"] }
anyhow = "1.0.98"
proptest = "1.6.0"
