[package]
name = "exercises_for_programmer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.21.3"
regex = "1"
rand = "0.8"
itertools = "0.14.0"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive" ] }
serde_json = "1"
actix-web = "4"
redis = "0.29.5"
tera = "1.20.0"
mongodb = "3.2.3"
md-5 = "0.10.6"
uuid = "1.16.0"
url = "2.5.4"
thiserror = "2.0.12"
clap = { version="4", features=["derive"] }
anyhow = "1.0.98"
proptest = "1.6.0"
eframe = "0.31.1"
image = "0.25.6"

[[bin]]
name="main01"
path="src/ex01/main.rs"
[[bin]]
name="main02"
path="src/ex02/main.rs"
[[bin]]
name="main03"
path="src/ex03/main.rs"
[[bin]]
name="main04"
path="src/ex04/main.rs"
[[bin]]
name="main05"
path="src/ex05/main.rs"
[[bin]]
name="main06"
path="src/ex06/main.rs"
[[bin]]
name="main07"
path="src/ex07/main.rs"
[[bin]]
name="main08"
path="src/ex08/main.rs"
[[bin]]
name="main09"
path="src/ex09/main.rs"
[[bin]]
name="main10"
path="src/ex10/main.rs"
[[bin]]
name="main11"
path="src/ex11/main.rs"
[[bin]]
name="main12"
path="src/ex12/main.rs"
[[bin]]
name="main13"
path="src/ex13/main.rs"
[[bin]]
name="main14"
path="src/ex14/main.rs"
[[bin]]
name="main15"
path="src/ex15/main.rs"
[[bin]]
name="main16"
path="src/ex16/main.rs"
[[bin]]
name="main17"
path="src/ex17/main.rs"
[[bin]]
name="main18"
path="src/ex18/main.rs"
[[bin]]
name="main19"
path="src/ex19/main.rs"
[[bin]]
name="main20"
path="src/ex20/main.rs"
[[bin]]
name="main21"
path="src/ex21/main.rs"
[[bin]]
name="main22"
path="src/ex22/main.rs"
[[bin]]
name="main23"
path="src/ex23/main.rs"
[[bin]]
name="main24"
path="src/ex24/main.rs"
[[bin]]
name="main25"
path="src/ex25/main.rs"
[[bin]]
name="main26"
path="src/ex26/main.rs"
[[bin]]
name="main27"
path="src/ex27/main.rs"
[[bin]]
name="main28"
path="src/ex28/main.rs"
[[bin]]
name="main29"
path="src/ex29/main.rs"
[[bin]]
name="main30"
path="src/ex30/main.rs"
[[bin]]
name="main31"
path="src/ex31/main.rs"
[[bin]]
name="main32"
path="src/ex32/main.rs"
[[bin]]
name="main33"
path="src/ex33/main.rs"
[[bin]]
name="main34"
path="src/ex34/main.rs"
[[bin]]
name="main35"
path="src/ex35/main.rs"
[[bin]]
name="main36"
path="src/ex36/main.rs"
[[bin]]
name="main37"
path="src/ex37/main.rs"
[[bin]]
name="main38"
path="src/ex38/main.rs"
[[bin]]
name="main39"
path="src/ex39/main.rs"
[[bin]]
name="main40"
path="src/ex40/main.rs"
[[bin]]
name="main41"
path="src/ex41/main.rs"
[[bin]]
name="main42"
path="src/ex42/main.rs"
[[bin]]
name="main43"
path="src/ex43/main.rs"
[[bin]]
name="main44"
path="src/ex44/main.rs"
[[bin]]
name="main45"
path="src/ex45/main.rs"
[[bin]]
name="main46"
path="src/ex46/main.rs"
[[bin]]
name="main47"
path="src/ex47/main.rs"
[[bin]]
name="main48"
path="src/ex48/main.rs"
[[bin]]
name="main49"
path="src/ex49/main.rs"
[[bin]]
name="main50"
path="src/ex50/main.rs"
[[bin]]
name="main51"
path="src/ex51/main.rs"
[[bin]]
name="main52"
path="src/ex52/main.rs"
[[bin]]
name="client52"
path="src/ex52/client.rs"
[[bin]]
name="main53"
path="src/ex53/main.rs"
[[bin]]
name="main54"
path="src/ex54/main.rs"
[[bin]]
name="main55"
path="src/ex55/main.rs"
[[bin]]
name="main56"
path="src/ex56/main.rs"
[[bin]]
name="main57"
path="src/ex57/main.rs"